--- a/css/main.css
+++ b/css/main.css
@@ -1029,7 +1029,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	max-width: 700px;
 	margin-left: auto;
 	margin-right: auto;
-	text-align: center;
+	text-align: left;
 	margin-bottom: 3.6rem;
 	position: relative;
 }
@@ -1497,6 +1497,21 @@ header .logo a {
 #about .section-intro {
 	margin-bottom: 3rem;
 }
+
+.view-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.view-button:hover {
+    background-color: #0056b3;
+}
+
 
 .intro-info {
 	margin-top: 4.2rem;
